<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jorgewilli.academia.view.fragment.home.TrainingFragment"
        android:label="@string/training_list_activity_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.jorgewilli.academia.view.fragment.gallery.SobreFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_sobre" />

    <fragment
        android:id="@+id/nav_sair"
        android:name="com.jorgewilli.academia.view.fragment.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>