<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".view.ExerciseFormActivity">

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#fafafa"
        android:hint="@string/descricao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_description"
        style="@style/ViewElementsDivider"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_description" />

    <View
        android:id="@+id/view_image"
        style="@style/ViewElementsDivider"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_description" />

    <RelativeLayout
        android:id="@+id/relative_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_image">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />


        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/no_image" />

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:src="@drawable/ic_delete"
            />

    </RelativeLayout>

    <View
        android:id="@+id/view_buttons"
        style="@style/ViewElementsDivider"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_take_picture"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:layout_marginTop="16dp"

        android:gravity="center"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_add_photo"

        app:layout_constraintEnd_toStartOf="@+id/button_select_gallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_buttons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_select_gallery"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/select_gallery"
        android:layout_marginTop="16dp"

        android:gravity="center"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_folder"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_take_picture"
        app:layout_constraintTop_toBottomOf="@+id/view_buttons" />


    <Button
        android:id="@+id/button_save"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_new"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>